--- a/templates/index.html
+++ b/templates/index.html
@@ -88,12 +88,16 @@
                     })
                 }
             }
+            const descInput = document.getElementById('description');
             document.getElementById("form").onsubmit = function(e) {
                 e.preventDefault();
+                const desc = descInput.value;
+                descInput.value = '';
                 fetch('/todos/create', {
                     method: "POST",
                     body: JSON.stringify({
-                        'description': document.getElementById('description').value
+                        'description': desc,
+                        'list_id': {{active_list.id}}
                     }),
                     headers: {
                         'Content-Type': 'application/json'
@@ -105,7 +109,20 @@
                 .then(function(jsonResponse) {
                     console.log(jsonResponse);
                     const liItem = document.createElement('LI');
-                    liItem.innerHTML = jsonResponse['description'];
+                    const checkbox = document.createElement('input');
+                    checkbox.className = 'check-completed'
+                    checkbox.type = 'checkbox';
+
+                    checkbox.setAttribute('data-id', jsonResponse.id);
+                    liItem.appendChild(checkbox);
+
+                    const deleteBtn = document.createElement('button');
+                    deleteBtn.className = 'delete-button';
+                    deleteBtn.setAttribute('data-id', jsonResponse.id);
+                    deleteBtn.innerHTML = '&cross;';
+                    liItem.appendChild(deleteBtn);
+
+                    // liItem.innerHTML = jsonResponse['description'];
                     document.getElementById('todos').appendChild(liItem);
                     document.getElementById('error').className = 'hidden';
                 })
